Seeing if this fixes that wrapping problem...

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -256,6 +256,9 @@ md-tabs , md-pagination-wrapper{
    padding-top:.5vh;
    padding-bottom:0;
 }
+.outerList{
+   white-space: normal;
+}
 
 .skList{
    white-space: nowrap;
